Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "What is Pipeshift?"
-description: "Welcome to the home of your new documentation"
+description: "Pipeshift is a modular orchestration platform for building with open-source AI components — embeddings, vector databases, LLMs, vision models and audio models — across any cloud or on-prem"
 ---
 
 <img
@@ -9,11 +9,7 @@ description: "Welcome to the home of your new documentation"
   alt="Hero Light"
 />
 
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+![6791f076b90459e09be0bb48 Deploymentscreennew Web](/images/6791f076b90459e09be0bb48_deploymentscreennew.webp)
 
 ## Setting up
 
