--- a/finetuning.mdx
+++ b/finetuning.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Finetuning"
+description: "Description of your new file."
 ---
-
